--- a/toyerp/.vscode/settings.json
+++ b/toyerp/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "java.configuration.updateBuildConfiguration": "interactive"
+  "java.project.sourcePaths": [
+    "backend/src/main/java"
+  ],
+  "java.configuration.updateBuildConfiguration": "automatic"
 }
