--- a/toyerp/backend/src/main/resources/application.yml
+++ b/toyerp/backend/src/main/resources/application.yml
@@ -11,6 +11,6 @@ server:
   port: 8080
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
-  mapper-locations: classpath*:com/example/toyerp/**/xml/*Mapper.xml
+  mapper-locations: classpath*:mapper/*Mapper.xml
 
   type-aliases-package: com.example.toyerp.domain
